--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,4 +1,5 @@
 @import 'config';
+@import 'home';
 
 body {
     background-color: $primary-color;
@@ -36,6 +37,7 @@ main {
 
         a {
             padding: 0.4rem;
+            @include transition-ease;
 
             &:hover {
                 color: $secondary-color;
